--- a/siak/web/WEB-INF/pages/administrasi/mahasiswa/pageKhusus.zul
+++ b/siak/web/WEB-INF/pages/administrasi/mahasiswa/pageKhusus.zul
@@ -7,13 +7,16 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://www.zkoss.org/2005/zul
 	http://www.zkoss.org/2005/zul/zul.xsd">
+
+    <?init class="org.zkoss.zkplus.databind.AnnotateDataBinderInit" arg0="./windowKhususDetail" ?>
+
     <window id="windowKhususDetail" apply="${khususDetailCtrl}" border="none" width="100%">
-        <borderlayout id="borderlayout_Khusus">
-            <center border="none" autoscroll="true">
-                <panel border="none">
-                    <panelchildren>
-                        <groupbox mold="3d" closable="false" style="height:100%; ">
-                            <caption image="/images/icons/view.gif" label="Khusus" />
+        <groupbox mold="3d" closable="false" style="height:100%; ">
+            <caption image="/images/icons/view.gif" label="Khusus"/>
+            <borderlayout id="borderKhusus">
+                <center border="none" autoscroll="true">
+                    <panel border="none">
+                        <panelchildren>
                             <grid sclass="GridLayoutNoBorder" fixedLayout="true"
                                   style="border:0px; padding-left:5px; padding-right:5px; ">
                                 <columns>
@@ -23,26 +26,202 @@
                                 <rows>
                                     <row>
                                         <label value="NRP / NIP"/>
-                                        <textbox id="txtb_nip" maxlength="12" readonly="true"/>
+                                        <textbox id="txtbNip" value="@{controller.mahasiswa.mmhspascakhs.cnip}"
+                                                 maxlength="20" width="80px" readonly="true"/>
                                     </row>
                                     <row>
                                         <label value="Pangkat"/>
-                                        <textbox id="txtb_pangkat" maxlength="12" readonly="true"/>
+                                        <hbox>
+                                            <textbox id="txtbPangkat"
+                                                     value="@{controller.mahasiswa.mmhspascakhs.mpangkatgolongan.cnmpangkatgolongan}"
+                                                     width="200px" readonly="true"/>
+                                            <bandbox id="cmbPangkat" sclass="mybandbox" width="0px"
+                                                     tooltiptext="Pangkat" disabled="true">
+                                                <bandpopup width="340px" height="300px">
+                                                    <panel title="LOV Pangkat"/>
+                                                    <vbox>
+                                                        <hbox width="100%">
+                                                            <grid fixedLayout="true" style="border:0px" width="100%">
+                                                                <columns>
+                                                                    <column width="60px"/>
+                                                                    <column width="150px"/>
+                                                                    <column width="90px"/>
+                                                                    <column width="40px"/>
+                                                                </columns>
+                                                                <rows>
+                                                                    <row>
+                                                                        <label id="labelPangkat" value="Kode Pangkat"/>
+                                                                        <textbox id="tbPangkat" width="98%"/>
+                                                                        <button id="buttonSearchPkt" image="/images/icons/search.gif" label="Search" tooltiptext="Search Pangkat"/>
+                                                                        <button id="buttonClosePkt" image="/images/icons/stop.gif" tooltiptext="Close Window"/>
+                                                                    </row>
+                                                                    <row>
+                                                                        <label id="labelNama" value="Nama Pangkat"/>
+                                                                        <textbox id="tbName" width="98%"/>
+                                                                    </row>
+                                                                    <row spans="4">
+                                                                        <vbox width="100%">
+                                                                            <paging id="pagingPangkat" pageSize="20"/>
+                                                                            <listbox id="listPangkat" width="100%" height="100%" multiple="false">
+                                                                                <listhead sizable="true">
+                                                                                    <listheader id="code" sort="auto" width="90%" label="Kode Pangkat"/>
+                                                                                    <listheader id="name" sort="auto" width="90%" label="Nama Pangkat"/>
+                                                                                </listhead>
+                                                                            </listbox>
+                                                                        </vbox>
+                                                                    </row>
+                                                                </rows>
+                                                            </grid>
+                                                        </hbox>
+                                                    </vbox>
+                                                </bandpopup>
+                                            </bandbox>
+                                        </hbox>
                                     </row>
                                     <row>
                                         <label value="Jabatan"/>
-                                        <textbox id="txtb_jabatan" maxlength="12" readonly="true"/>
+                                        <hbox>
+                                            <textbox id="txtbJabatan"
+                                                     value="@{controller.mahasiswa.mmhspascakhs.mjabatan.cnmjabatan}"
+                                                     width="200px" readonly="true"/>
+                                            <bandbox id="cmbJabatan" sclass="mybandbox" width="0px"
+                                                     tooltiptext="Jabatan" disabled="true">
+                                                <bandpopup width="340px" height="300px">
+                                                    <panel title="LOV Jabatan"/>
+                                                    <vbox>
+                                                        <hbox width="100%">
+                                                            <grid fixedLayout="true" style="border:0px" width="100%">
+                                                                <columns>
+                                                                    <column width="60px"/>
+                                                                    <column width="150px"/>
+                                                                    <column width="90px"/>
+                                                                    <column width="40px"/>
+                                                                </columns>
+                                                                <rows>
+                                                                    <row>
+                                                                        <label id="labelJabatan" value="Jabatan"/>
+                                                                        <textbox id="tbJabatan" width="98%"/>
+                                                                        <button id="buttonSearchJbt"
+                                                                                image="/images/icons/search.gif"
+                                                                                label="Search"
+                                                                                tooltiptext="Search Jabatan"/>
+                                                                        <button id="buttonCloseJbt"
+                                                                                image="/images/icons/stop.gif"
+                                                                                tooltiptext="Close Window"/>
+                                                                    </row>
+                                                                    <row spans="4">
+                                                                        <vbox width="100%">
+                                                                            <paging id="pagingJabatan" pageSize="20"/>
+                                                                            <listbox id="listJabatan" width="100%"
+                                                                                     height="100%" multiple="false">
+                                                                                <listhead sizable="true">
+                                                                                    <listheader id="jabatan" sort="auto"
+                                                                                                width="90%"
+                                                                                                label="Jabatan"/>
+                                                                                </listhead>
+                                                                            </listbox>
+                                                                        </vbox>
+                                                                    </row>
+                                                                </rows>
+                                                            </grid>
+                                                        </hbox>
+                                                    </vbox>
+                                                </bandpopup>
+                                            </bandbox>
+                                        </hbox>
                                     </row>
                                     <row>
                                         <label value="Kesatuan"/>
-                                        <textbox id="txtb_kesatuan" maxlength="12" readonly="true"/>
+                                        <textbox id="txtbKesatuan"
+                                                 value="@{controller.mahasiswa.mmhspascakhs.ckesatuan}" maxlength="30"
+                                                 width="180px" readonly="true"/>
                                     </row>
                                 </rows>
                             </grid>
-                        </groupbox>
-                    </panelchildren>
-                </panel>
-            </center>
-        </borderlayout>
+                            <space/>
+
+                            <groupbox mold="3d" closable="false"
+                                      style="border:0px; padding-left:10px; padding-right:10px; padding-bottom:5px; ">
+                                <caption image="/images/icons/view.gif"
+                                         label="Riwayat Pendidikan Pengembangan Umum Militer/Polri/Pembentukan"/>
+                                <div sclass="z-toolbar" style="padding:0">
+                                    <hbox pack="stretch" sclass="hboxRemoveWhiteStrips" width="100%">
+                                        <toolbar align="start" style="float:left; border-style: none;" height="28px">
+                                            <hbox align="center" style="padding: 2px"></hbox>
+                                        </toolbar>
+                                        <toolbar align="center" style="float:left; border-style: none;" height="28px">
+                                            <hbox align="center" style="padding: 2px"></hbox>
+                                        </toolbar>
+                                        <toolbar align="end" style="float:right; border-style: none;" height="28px">
+                                            <button id="btnNewRiwayatPendidikan" height="24px"
+                                                    image="/images/icons/btn_new2_16x16.gif"/>
+                                            <button id="btnDeleteRiwayatPendidikan" height="24px"
+                                                    image="/images/icons/btn_delete2_16x16.gif"/>
+                                        </toolbar>
+                                    </hbox>
+                                </div>
+
+                                <borderlayout id="borderRiwayatPendidikan" style="height:200px;">
+                                    <north border="none" height="26px">
+                                        <paging id="pagingRiwayatPendidikan" style="width:100%" pageSize="20"/>
+                                    </north>
+                                    <center border="none">
+                                        <listbox id="listRiwayatPendidikan" width="100%" height="100%" multiple="false"
+                                                 style="border-top-width: 0px; border-left-width: 0px; border-right-width: 0px; border-bottom-width: 1px;">
+                                            <listhead sizable="true">
+                                                <listheader id="jenis" sort="auto" width="30%"
+                                                            label="Jenis / Nama Pembentukan"/>
+                                                <listheader id="tahun" sort="auto" width="10%" label="Tahun"/>
+                                                <listheader id="cketerangan" sort="auto" width="60%"
+                                                            label="Keterangan"/>
+                                            </listhead>
+                                        </listbox>
+                                    </center>
+                                </borderlayout>
+                            </groupbox>
+
+                            <groupbox mold="3d" closable="false"
+                                      style="border:0px; padding-left:10px; padding-right:10px; padding-bottom:5px;">
+                                <caption image="/images/icons/view.gif" label="Riwayat Pangkat"/>
+                                <div sclass="z-toolbar" style="padding:0">
+                                    <hbox pack="stretch" sclass="hboxRemoveWhiteStrips" width="100%">
+                                        <toolbar align="start" style="float:left; border-style: none;" height="28px">
+                                            <hbox align="center" style="padding: 2px"></hbox>
+                                        </toolbar>
+                                        <toolbar align="center" style="float:left; border-style: none;" height="28px">
+                                            <hbox align="center" style="padding: 2px"></hbox>
+                                        </toolbar>
+                                        <toolbar align="end" style="float:right; border-style: none;" height="28px">
+                                            <button id="btnNewRiwayatPangkat" height="24px"
+                                                    image="/images/icons/btn_new2_16x16.gif"/>
+                                            <button id="btnDeleteRiwayatPangkat" height="24px"
+                                                    image="/images/icons/btn_delete2_16x16.gif"/>
+                                        </toolbar>
+                                    </hbox>
+                                </div>
+                                <borderlayout id="borderRiwayatPangkat" style="height:200px">
+                                    <north border="none" height="26px">
+                                        <paging id="pagingRiwayatPangkat" style="width:100%" pageSize="20"/>
+                                    </north>
+                                    <center border="none">
+                                        <listbox id="listRiwayatPangkat" width="100%" height="100%" multiple="false">
+                                            <listhead sizable="true">
+                                                <listheader id="cdpangkat" sort="auto" width="15%"
+                                                            label="Kode Pangkat"/>
+                                                <listheader id="nmpangkat" sort="auto" width="25%"
+                                                            label="Nama Pangkat"/>
+                                                <listheader id="ctmt" sort="auto" width="10%" label="TMT"/>
+                                                <listheader id="dketerangan" sort="auto" width="50%"
+                                                            label="Keterangan"/>
+                                            </listhead>
+                                        </listbox>
+                                    </center>
+                                </borderlayout>
+                            </groupbox>
+                        </panelchildren>
+                    </panel>
+                </center>
+            </borderlayout>
+        </groupbox>
     </window>
 </zk>
