--- a/siak/web/WEB-INF/pages/administrasi/prodi/prodiDetail.zul
+++ b/siak/web/WEB-INF/pages/administrasi/prodi/prodiDetail.zul
@@ -98,7 +98,7 @@
                                             <label value="*" style="color:red;font-size:10px"/>
                                         </hbox>
                                         <hbox pack="stretch" width="50%">
-                                            <textbox
+                                            <textbox constraint="no empty"
                                                     id="txtb_jenjang"
                                                     value="@{controller.prodi.mjenjang.cnmjen}"
                                                     readonly="true" maxlength="50" width="99%"/>
@@ -115,7 +115,7 @@
                                             <label value="*" style="color:red;font-size:10px"/>
                                         </hbox>
                                         <hbox pack="stretch" width="50%">
-                                            <textbox
+                                            <textbox constraint="no empty"
                                                     id="txtb_sekolah"
                                                     value="@{controller.prodi.msekolah.cnamaSekolah}"
                                                     readonly="true" maxlength="50" width="99%"/>
@@ -155,7 +155,7 @@
                                     <row>
                                         <hbox>
                                             <label
-                                                    value="SEK KA Prodi"/>
+                                                    value="SET Prodi"/>
                                             <label value="*"
                                                    style="color:red;font-size:10px"/>
                                         </hbox>
